v1.0.7 - Burger Menu Fix
Fixed an issue with the mobile nav menu.
The icons were not hidden correctly, resulting in a layout shift.

Moved the logo at the top so it's not covered by the navigation burger button on mobile.

--- a/src/assets/css/details.css
+++ b/src/assets/css/details.css
@@ -100,6 +100,18 @@
 
 }
 
+@media screen and (width <= 440px){
+
+    .details-page{
+    
+        & header{
+            padding-top:calc(var(--size8) + var(--size8));
+        }
+
+    }
+    
+}
+
 @keyframes phAnimation{
     0%{
         background-position:-100vw 0;
