--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -551,6 +551,7 @@
             filter:none;
 
             & .nav-btn:not(.burger-btn){
+                flex:0;
                 width:0;
             }
 
@@ -590,6 +591,7 @@
                 width:100%;
 
                 & .nav-btn{
+                    flex:1;
                     width:var(--btnSize);
                 }
 
